# easystd

./: CMakeLists.txt  LICENSE.md  Makefile  README.MD  cmake_uninstall.cmake.in
include/: array.h  eerror.h  emath.h  estd.h  estring.h  global.h  grow.h  iterator.h
include/estd/: argparser.h  array.h  eerror.h  efile.h  emath.h  estring.h  global.h  grow.h  hash.h  iterator.h
src/: array.c  eerror.c  emath.c  estring.c  grow.c  iterator.c
src/estd/: argparser.c  array.c  eerror.c  efile.c  emath.c  estring.c  global.c  grow.c  hash.c  iterator.c
test/: Makefile
test/include/: test_array.h  test_estring.h  test_grow.h
test/src/: main.c  test_array.c  test_grow.c  test_string.c
